--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <nav>
+        
+    </nav>
+    <main>
+
+    </main>
 </body>
 </html>
