add basic grid & content for sidebar and header

--- a/index.html
+++ b/index.html
@@ -8,10 +8,37 @@
 </head>
 <body>
     <header>
-
+        <div id="header-top-half">
+            <input type="text">
+            <h3>Morgan Oakley</h3>
+        </div>
+        <div id="header-bottom-half">
+            <div id="name-welcome">
+                <h5>Hi there,</h5>
+                <h2>Morgan Oakley (@morgan)</h2>
+            </div>
+            <div id="header-buttons">
+                <button class="header-action-buttons">New</button>
+                <button class="header-action-buttons">Upload</button>
+                <button class="header-action-buttons">Share</button>
+            </div>
+        </div>
     </header>
     <nav>
-        
+        <h1>Dashboard</h1>
+        <div id="nav-links">
+            <h3><a href="">Home</a></h3>
+            <h3><a href="">Profile</a></h3>
+            <h3><a href="">Messages</a></h3>
+            <h3><a href="">History</a></h3>
+            <h3><a href="">Tasks</a></h3>
+            <h3><a href="">Communities</a></h3>
+        </div>
+        <div id="preferences">
+            <h3><a href="">Settings</a></h3>
+            <h3><a href="">Support</a></h3>
+            <h3><a href="">Privacy</a></h3>
+        </div>
     </nav>
     <main>
 
