add main grid styling and basic content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,89 @@
         </div>
     </nav>
     <main>
-
+        <div id="projects-container">
+            <h3>Your Projects</h3>
+            <div id="projects-display-container">
+                <div class="project-display-box-shadow">
+                    <div class="project-display">
+                        <h4>Super Cool Project</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="project-display-box-shadow">
+                    <div class="project-display">
+                        <h4>Less Cool Project</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="project-display-box-shadow">
+                    <div class="project-display">
+                        <h4>Impossible App</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="project-display-box-shadow">
+                    <div class="project-display">
+                        <h4>Easy Peasy App</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="project-display-box-shadow">
+                    <div class="project-display">
+                        <h4>Ad Blocker</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="project-display-box-shadow">
+                    <div class="project-display">
+                        <h4>Money Maker</h4>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="announcements-and-trending-container">
+            <h3>Announcements</h3>
+            <div id="announcements-container">
+                <div class="announcements">
+                    <div class="border-bottom">
+                        <h4>Site Maintenance</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="announcements">
+                    <div class="border-bottom">
+                        <h4>Community Share Day</h4>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="announcements">
+                    <h4>Updated Privacy Policy</h4>
+                    <p></p>
+                </div>
+            </div>
+            <div id="trending-container">
+                <h3>Trending</h3>
+                <div id="trending-projects-container">
+                    <div class="trending-projects">
+                        <h5>@tegan</h5>
+                        <p>World Peace Builder</p>
+                    </div>
+                    <div class="trending-projects">
+                        <h5>@Morgan</h5>
+                        <p>Super Cool Project</p>
+                    </div>
+                    <div class="trending-projects">
+                        <h5>@Kendall</h5>
+                        <p>Life Changing App</p>
+                    </div>
+                    <div class="trending-projects">
+                        <h5>@alex</h5>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
